tests/base/invalid/SetUnion_CompileFail_2.whiley
int f({int} xs):
    return |xs|

void System::main([string] args):
    ys = {1.0234234,1.12}
    xs = {1,2,3,4}
    f(xs ∪ ys)
    out->println(str(xs))
